# UniversalProjectManager

./: .gitignore  .replit  README.md  app.py  clear_and_populate_db.py  create_user_accounts.py  initialize_data.py  initialize_sample_data.py  migrate_db.py  pyproject.toml
attached_assets/: Pasted-Build-a-Project-Management-Information-System-PMIS-Web-App-Project-Title-Universal-Project-Manage-1746683193308.txt
pages/: archive.py  change_requests.py  documents.py  project_creation.py  public_projects.py  reports.py  subtasks.py  team_management.py  team_meetings.py  timeline.py  user_management.py
utils/: change_request.py  data_management.py  database.py  pdf_generator.py  visualization.py
