[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.45.0",
    "twilio>=9.6.0",
]
